# Library-Search-Engine-Design

./: .gitignore  Book.cpp  CMakeLists.txt  Operations.hpp  README.md  output.csv
data/: output.csv
include/: Operations.hpp
src/: Book.cpp  main.cpp
